--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,5 @@
 /***** Imports *****/
 
-@import url('./base.css');
+@import url('base.css');
+@import url('landing-page.css');
+@import url('components.css');
