--- a/src/css/components.css
+++ b/src/css/components.css
@@ -49,7 +49,8 @@
     outline-color: var(--primary-light);
 }
 
-.nav__link:hover{
+.nav__link:hover,
+.nav__link:active{
     /* add the border bottom color*/
     border-bottom-color: var(--primary);
 }
