--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 /***** Imports *****/
 
+@import url('utilities.css');
 @import url('base.css');
 @import url('layout.css');
 @import url('pages.css');
