--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -1,3 +1,9 @@
+/***** Text center *****/
+
+.text--center{
+    text-align: center;
+}
+
 /***** Margin Bottom ****/
 
 .mb--large{
@@ -14,7 +20,7 @@
 
 /***** Key Frames *****/
 
-/*create animation of moveInRight*/
+/* Create animation of moveInRight */
 @keyframes moveInRight {
     /*beginning of animation*/
     0%{
@@ -39,7 +45,7 @@
     }
 }
 
- /*create animation of moveInLeft*/
+ /* Create animation of moveInLeft */
 @keyframes moveInLeft {
     /*beginning of animation*/
     0%{
@@ -65,7 +71,7 @@
     
 }
 
-/*create an animation to moveInBottom*/
+/* Create an animation to moveInBottom */
 @keyframes moveInBottom {
         /*beginning of animation*/
         0%{
