--- a/src/css/components.css
+++ b/src/css/components.css
@@ -21,6 +21,7 @@
 
 .button > svg {
     /*set the widht and height*/
+    display: inline-block;
     width: 2rem;
     height: 2rem;
     margin-left: 1rem;
@@ -80,4 +81,79 @@
     transform: translateY(-.1rem);
 }
 
+/****** Feature *****/
 
+.feature{
+    /*
+    set the feature background color and an opacity of 80%
+    set the width of the feature
+    give the feature a 2rem padding all around
+    clip the corners of the feature to be rounded*/
+    background-color: var(--text-light);
+    opacity: 80%;
+    width: 25rem;
+    padding: 2rem;
+    border-radius: 2rem;
+    /*set the display to flex and center align the items along the cross axis*/ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.feature > svg{
+    /*set the display to inline block so vertical padding and margin are respected
+    fill the color of the svg*/
+    display: inline-block;
+    width: 6rem;
+    height: 6rem;
+    fill: var(--primary);
+}
+
+
+/***** Package *****/
+
+.package{
+    /*set the width 
+    give a border radius of 2rem to circle out the edges
+    hide the over flow,i.e the image
+    give a box shaodw around the element*/
+    width: 30rem;
+    border-radius: 2rem;;
+    overflow: hidden;
+    box-shadow: 1rem 1rem 2rem var(--text-dark);
+    /*set the display to flex
+    set the flex direction to column
+    align the items on the cross axis in the center*/
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.package__img{
+    /*set the eight and give a width of 100%*/
+    height:20rem;
+    width: 100%;
+}
+
+.package__list{
+    /*remove any list style
+    set the display to flex
+    set the flex direction to column
+    align the items on the cross axis in the center*/
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.package__item{
+    /*add a padding vertically of 1 rem and 0 horizontally*/
+    padding: 1rem 0;
+}
+
+.package__item:not(:last-child){
+    /*for every package item that is not the last child ass a bottom border*/
+    border-bottom: .1rem solid var(--primary);
+}
+
+/***** Story *****/
