--- a/src/css/base.css
+++ b/src/css/base.css
@@ -47,6 +47,7 @@ body{
 
 .heading{
     text-transform: uppercase;
+    font-family: inherit;
     font-weight: 700;
 }
 
@@ -59,6 +60,7 @@ body{
 }
 
 .heading--5{
+    font-size: 2rem;
 
 }
 
