--- a/src/css/components.css
+++ b/src/css/components.css
@@ -9,7 +9,7 @@
     font-size: inherit;
     padding: 1rem 2rem;
     border-radius: 2rem;
-    outline: none;
+    outline: transparent;
     transition: all .2s;
     /*set the display to flex
     set the width to max-content to avoid flexbox from stretching entire available space
@@ -65,9 +65,7 @@
 }
 
 .button--link:focus{
-    /*set the outline to transparent
-    set the box shadow to have a spread radius of .2rem with the primary light color*/
-    outline: transparent;
+    /*set the box shadow to have a spread radius of .2rem with the primary light color*/
     box-shadow: 0 0 0 .2rem var(--primary-light);
 }
 
@@ -79,6 +77,21 @@
 .button--link:active{
     /*translate the button in the y directions*/
     transform: translateY(-.1rem);
+}
+
+/*Button form states*/
+.button--form{
+    border: none;
+}
+
+.button--form:hover,
+.button--form:active{
+    background-color: var(--primary-dark);
+}
+
+.button--form:focus{
+    /*set the box shadow to have a spread radius of .2rem with the primary light color*/
+    box-shadow: 0 0 0 .2rem var(--primary-light);
 }
 
 /****** Feature *****/
@@ -208,4 +221,66 @@
     width: 10rem;
     grid-column:1/2;
     grid-row: 1/-1;
+}
+
+/****** Form *****/
+
+.form{
+    /*set the width of the form to 50% of parent
+    add 4rem vertically and 2rem horizontally of padding*/
+    width: 50%;
+    padding: 4rem 2rem;
+    /*add a border radius of 2rem
+    set the abckground color
+    add a box shadow around the entire form*/
+    border-radius: 2rem;
+    background-color: var(--text-light);
+    box-shadow: 1rem 1 rem 2rem var(--text-dark);
+    /*create a grid with a gap of 4 rem vertically and 2 rem horizontally*/
+    display:grid;
+    grid-template-columns: min-content 1fr;
+    grid-auto-rows: min-content;
+    grid-gap: 4rem 2rem;
+    align-items: center;
+}
+
+.form__label{
+    /*set the color*/
+    color: var(--primary);
+}
+
+.form > button{
+    /*set the grid column
+    justify the item to the center horizontally*/
+    grid-column: 1/-1;
+    justify-self: center;
+
+}
+
+/*Form input states*/
+.form__input{
+    /*set the font family and size to inherit
+    add a vertical apdding of 1 rem and a horizontall padding of .5rem*/
+    font-family: inherit;
+    font-size: inherit;
+    background-color: #fff;
+    padding: 1rem .5rem;
+    /*remove the border
+    add a border radius
+    set the outline to transparent*/
+    border: none;
+    border-radius: 2rem;
+    outline: transparent
+}
+
+.form__input:focus:invalid{
+    /*when the form input is in focus and invalid
+        add a box shadow with the secondary color*/
+    box-shadow: 0 0 0 .2rem var(--secondary);
+}
+
+.form__input:focus:valid{
+     /*when the form input is in focus and invalid
+        add a box shadow with the primary color*/
+    box-shadow: 0 0 0 .2rem var(--primary);
 }
