feat: Put footer styles

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -93,4 +93,7 @@
 
 .footer{
     grid-area: footer;
+    color: var(--text-light);
+    background-image: linear-gradient(to bottom right, var(--primary-light),var(--primary-dark));
+    padding: 2rem;
 }
