feat: Put link scrolling

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -69,6 +69,10 @@
     border-bottom-color: var(--primary);
 }
 
+.nav__link--active{
+    color: var(--primary) !important;
+}
+
 /***** Header *****/
 
 .header{
