--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -101,3 +101,5 @@
     background-image: linear-gradient(to bottom right, var(--primary-light),var(--primary-dark));
     padding: 2rem;
 }
+
+/********** Media Queries **********/
