--- a/src/css/components.css
+++ b/src/css/components.css
@@ -298,3 +298,12 @@
 }
 
 /********** Media Queries **********/
+
+/***** 900 px breakpoint *****/
+
+@media screen and (max-width: 5665.25em){
+
+    .form{
+        width: 75%;
+    }
+}
