--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -171,12 +171,14 @@
         grid-row: 3/-1;
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
     }
 
     .about__photo{
         position: relative;
+        margin: 2rem;
     }
 
 
