--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -28,6 +28,32 @@
     z-index: 10;
 }
 
+.nav__button{
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    transition: all .2s;
+}
+
+.nav__button:hover .nav__icon,
+.nav__button:active .nav__icon{
+    fill: var(--primary);
+}
+
+.nav__button:focus{
+    outline-color: var(--primary-light);
+}
+
+.nav__button--active .nav__icon{
+    fill: var(--secondary);
+}
+
+.nav__icon{
+        fill: var(--text-light);
+        height: 2rem;
+        width: 2rem;
+}
+
 /* Navigation list */
 .nav__list{
     /*remove any list styles*/
